------------------------------------------------------------------------
r1199 | gaser | 2017-10-19 00:22:21

Changed paths:
M       CAT12-Manual.docx
M       CAT12-Manual.pdf
M       CHANGES.txt
!       cat_surf_results.m

Changed: Updated manual w.r.t. re-use of customized DARTEL templates.
------------------------------------------------------------------------
r1198 | gaser | 2017-10-17 14:55:29 +0200 (Di, 17 Okt 2017) | 17 lines

Changed paths:
M       CAT12-Manual.docx
M       CAT12-Manual.pdf
M       CHANGES.txt
M       cat12.m
M       cat_surf_info.m
M       cat_surf_results.m
M       html/cat_methods_RBM.html
M       html/cat_starting.html
A       templates_surfaces/mesh.central.freesurfer.gii
M       templates_surfaces/templates_surfaces.man

(1) Changed: Finished preparing all tools for dealing with merged left and
    right hemipsheres. Cerebellar merging is not yet fully supported.
(2) Changed: Updated online help and CAT12 manual w.r.t. merged meshes.
(3) Added: Added merged mesh for fsaverage central surface.

------------------------------------------------------------------------
r1197 | gaser | 2017-10-17 09:20:31 +0200 (Di, 17 Okt 2017) | 6 lines

Changed paths:
M       CHANGES.txt
M       cat_surf_display.m

Changed: Check whether rng function exists in cat_surf_display.m

------------------------------------------------------------------------
r1196 | gaser | 2017-10-17 08:30:51 +0200 (Di, 17 Okt 2017) | 7 lines

Changed paths:
M       CHANGES.txt
M       cat_surf_display.m
M       cat_surf_info.m

Changed: Prepared display function for dealing with merged hemisphere meshes.

------------------------------------------------------------------------
r1195 | gaser | 2017-10-17 00:31:44 +0200 (Di, 17 Okt 2017) | 14 lines

Changed paths:
M       CHANGES.txt
M       cat12.m
M       cat_conf_stools.m
M       cat_stat_check_cov.m
M       cat_surf_resamp.m
M       cat_surf_resamp_freesurfer.m
 M      templates_surfaces/lh.patch.freesurfer.gii